Fixed projects width on mobile devices

--- a/src/app/components/projects/projects.component.less
+++ b/src/app/components/projects/projects.component.less
@@ -14,8 +14,14 @@
   
   .project-text {
     margin: auto;
-    width: 70%;
+    width: 50%;
     text-align: center;
+  }
+
+  @media only screen and (max-width: 600px) {
+    .project-text {
+      width: 70%;
+    }
   }
   
   .project-links {
